<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="nm_add_to_ril" comment="try to use a string starting with A or just leave Pocket">Add to Pocket</string>
	<string name="nm_add_tags" comment="Title of a page">Add Tags</string>
	<string name="nm_theme_light" comment="Appearance/color of the app">Light</string>
	<string name="nm_theme_dark" comment="Appearance/color of the app">Dark</string>
	<string name="clipboard_label_url">Link copied from Pocket</string>
	<string name="nm_archive" comment="Title in the main menu of the action bar. This is a noun.">Archive</string>
	<string name="nm_link">Link</string>
	<plurals name="nm_time_estimate" comment="Short label showing the number of minutes to read a story, watch a video, or listen to an article e.g. '5 min'">
		<item quantity="other">%1$d min</item>
	</plurals>
	<plurals name="nm_time_to_read_estimate" comment="Short label showing the number of minutes to read a story, watch a video, or listen to an article e.g. '5 min read'">
		<item quantity="other">%1$d min read</item>
	</plurals>
	<plurals name="nm_time_left_estimate" comment="Short label showing the number of minutes to read a story, watch a video, or listen to an article e.g. '5 min left'">
		<item quantity="other">%1$d min left</item>
	</plurals>
	<string name="ac_login">Log in</string>
	<string name="ac_logout">Log out</string>
	<string name="ac_authenticate">Sign up or sign in</string>
	<string name="ac_continue_signed_out" comment="A button next to a 'Sign up or sign in' button, that allows you to go to the Home screen without signing up or signing in.">Skip sign in</string>
	<string name="ac_cancel">Cancel</string>
	<string name="ac_close_app">Close app</string>
	<string name="ac_ok">OK</string>
	<string name="ac_yes">Yes</string>
	<string name="ac_no">No</string>
	<string name="ac_retry">Retry</string>
	<string name="ac_try_again">Try Again</string>
	<string name="ac_create_new_cache">Create new cache</string>
	<string name="ac_clear_cache">Clear cache</string>
	<string name="ac_get_help">Get Help</string>
	<string name="ac_submit">Submit</string>
	<string name="ac_write_review" comment="link to leave a review on the application store">Review</string>
	<string name="ac_no_thanks">No thanks</string>
	<string name="ac_next">Next</string>
	<string name="ac_accept">Accept</string>
	<string name="ac_got_it_caps">GOT IT</string>
	<string name="ac_continue">Continue</string>
	<string name="ac_discard_changes">Discard Changes</string>
	<string name="ac_continue_editing">Continue Editing</string>
	<string name="ac_add_new_tag">add new tag <b>\‘{name_of_tag}\‘</b></string>
	<string name="ac_undo">UNDO</string>
	<string name="ac_highlight" comment="Label for button that highlights selected text">@string/ic_highlight</string>
	<string name="ac_copy">@string/ic_copy</string>
	<string name="ac_translate">Translate</string>
	<string name="ac_web_search">Web Search</string>
	<string name="ac_select_all">Select All</string>
	<string name="ac_clear">Clear</string>
	<string name="ac_share">Share</string>
	<string name="ac_maybe_later">Maybe later</string>
	<string name="ac_install">Install</string>
	<string name="lb_tab_saves">Saves</string>
	<string name="lb_continue_reading" comment="should be all upper case">CONTINUE READING</string>
	<string name="lb_add_copied_url" comment="a title asking the user if they would like to save a URL from their device clipboard">Save Copied URL?</string>
    <string name="lb_slower" comment="Speaking rate of the Text To Speech">Speak Slower</string>
    <string name="lb_faster" comment="Speaking rate of the Text To Speech">Speak Faster</string>
    <string name="lb_tts_language">Language</string>
    <string name="lb_tts_voice">Voice</string>
	<string name="lb_select_tags_hint">Select or enter a tag</string>
    <string name="lb_select_tags_hint_no_tags">Enter a tag</string>
	<plurals comment="Header above the list of item" name="lb_selected">
		<item quantity="one">%1$s selected</item>
		<item quantity="other">%1$s selected</item>
	</plurals>
	<string name="lb_suggested_tags">Suggested Tags</string>
	<string name="lb_all_tags">All Tags</string>
	<string name="lb_recent_tags">Recent Tags</string>
	<string name="lb_tags_autocomplete">Tags</string>
	<string name="lb_downloading_items_notification" comment="the number of items being currently downloaded for offline viewing. this number will count down as downloading progresses">Downloading {number_of_items} Items&#8230;</string>
	<string name="lb_search_hint">Search</string>
	<string name="lb_list_search_hint">Search your list</string>
	<string name="lb_list_archive_search_hint">Search your archive</string>
	<string name="lb_recent_searches_sc">Recent searches</string>
	<string name="lb_time_to_read" comment="Header for a section of filters that let you view a subset of your saved articles based on their length.">Time to read</string>
	<string name="lb_sort_by">Sort by</string>
	<string name="lb_sort_by_newest">Newest saved</string>
	<string name="lb_sort_by_oldest">Oldest saved</string>
	<string name="lb_sort_by_newest_archive">Newest archived</string>
	<string name="lb_sort_by_oldest_archive">Oldest archived</string>
	<string name="lb_sort_by_shortest">Shortest to read</string>
	<string name="lb_sort_by_longest">Longest to read</string>
	<string name="lb_prem_purchase_title">Join Pocket\nPremium</string>
	<string name="lb_prem_purchase_perm_lib_title">Build a permanent library</string>
	<string name="lb_prem_purchase_perm_lib_desc">Even if a page you\'ve saved is taken down online, you\'ll still have a copy of it in Pocket.</string>
	<string name="lb_prem_purchase_ad_free_title">Focused attention</string>
	<string name="lb_prem_purchase_ad_free_desc">A calm, ad-free reading environment gives your mind the peace and quiet it deserves.</string>
	<string name="lb_prem_purchase_search_title">Stories at your fingertips</string>
	<string name="lb_prem_purchase_search_desc">Quickly find anything you\'ve saved with full-text search. Look up articles by keyword, topic, author, tag, and more.</string>
	<string name="lb_prem_purchase_tags_title">Smart tags</string>
	<string name="lb_prem_purchase_tags_desc">We\'ll suggest tags from your list each time you save a story—the more you tag, the more helpful the suggestions become.</string>
	<string name="lb_prem_purchase_highlights_title">Your ideas, highlighted</string>
	<string name="lb_prem_purchase_highlights_desc">With unlimited highlighting in every article, you\'ll have a permanent record of all those \"Aha!\" moments.</string>
	<string name="lb_prem_purchase_reader_title">Custom reading experience</string>
	<string name="lb_prem_purchase_reader_desc">Like rounder fonts, wider spacing or condensed text? Tailor Pocket to suit your reading style.</string>
	<string name="lb_prem_purchase_per_month" comment="per month subscription label on subscription button">%s/month</string>
	<string name="lb_prem_purchase_per_year" comment="per year subscription label on subscription button">%s/year</string>
	<string name="lb_prem_purchase_complete_title">Hooray!</string>
	<string name="lb_prem_purchase_complete_message">You\'re officially a Pocket Premium member. Welcome to the new ad-free, customizable, permanent version of your Pocket. We think you\'ll like it here.</string>
	<string name="lb_prem_purchase_complete_renew_title">Welcome Back!</string>
	<string name="lb_prem_purchase_complete_renew_message">We\'ve renewed your subscription, and you\'re officially a Pocket Premium member again. We hope you enjoy this ad-free, customizable, permanent version of your Pocket.</string>
	<string name="lb_prem_purchase_complete_button">Back to Pocket</string>
	<string name="lb_prem_purchase_terms">Subscriptions will automatically renew each period until canceled in Google Play.</string>
	<string name="lb_save_25p_2_line" comment="keep as short as possible">Save\n25%</string>
	<string name="lb_annotations_upsell_t">Need more highlights?</string>
	<string name="lb_annotations_upsell_m">You\'re currently limited to %1$d highlights per article. Get unlimited highlights (plus more) by upgrading to Pocket Premium today.</string>
	<string name="lb_annotations_upsell_cta" comment="Label for a button in a Highlights upgrade prompt leading to the full Premium upgrade/purchase screen.">Get Premium</string>
    <string name="mu_settings" comment="this text label should be short">Settings</string>
	<string name="mu_read_later" comment="this text label should be short">Save to Pocket</string>
	<string name="mu_help" comment="this text label should be short">Help</string>
	<string name="mu_copy_link" comment="this text label should be short">Copy Link</string>
	<string name="mu_report_article_view" comment="this text label should be short">Report Article Problem</string>
	<string name="mu_refresh" comment="this text label should be short">Refresh</string>
	<string name="mu_find_in_page" comment="this text label should be short">Find in Page</string>
	<string name="mu_display_settings" comment="this text label should be short">Text Settings</string>
	<string name="mu_delete" comment="this text label should be short">Delete</string>
	<string name="mu_view_original">View Original</string>
	<string name="mu_switch_to_article" comment="this text label should be short">Switch to Article View</string>
	<string name="mu_add_tags" comment="this text label should be short">Add Tags</string>
	<string name="mu_favorite" comment="this text label should be short">Favorite</string>
	<string name="mu_unfavorite" comment="this text label should be short">Unfavorite</string>
	<string name="mu_home" comment="this text label should be short">Home</string>
	<string name="mu_saves" comment="this text label should be short">Saves</string>
	<string name="mu_annotations" comment="This text label should be short. Here 'Highlights' references a new feature where a user can highlight text in articles to save memorable quotes.">Highlights</string>
	<string name="mu_premium" comment="this text label should be short">Premium</string>
	<string name="mu_untagged" comment="make sure this phrase matches what is in setting_untagged_label and setting_untagged_sum">not tagged</string>
	<string name="dg_loading">Loading&#8230;</string>
	<string name="dg_changing_data_location">Changing Storage Location&#8230;</string>
	<string name="dg_clearing_cache">Clearing Cache&#8230;</string>
	<string name="dg_logging_out">Logging out&#8230;</string>
	<string name="setting_account_management">Account management</string>
	<string name="setting_delete_account">Delete account</string>
	<string name="setting_delete_account_header">Delete your account</string>
	<string name="setting_delete_account_warning">Warning: this can’t be undone</string>
	<string name="setting_delete_account_cancel_premium">To delete your account, you must first <b><annotation link="https://help.getpocket.com/article/986-canceling-your-pocket-premium-subscription">cancel your Premium subscription here</annotation></b>.</string>
	<string name="setting_delete_account_permanently_delete">You understand your Pocket account and data will be <b>permanently deleted</b>.</string>
	<string name="viewed">Viewed</string>
	<string name="not_viewed">Not Viewed</string>
	<string name="my_list_filter_filter">Filter</string>
	<string name="empty_list_tagged_title">Organize your list</string>
	<string name="empty_list_tagged_message">Tag your saves by topic to find them later.</string>
	<string name="empty_list_tagged_action">How to tag</string>
	<string name="empty_list_archive_title">Keep your list fresh and clean</string>
	<string name="empty_list_archive_message">Archive the saves you\'re finished with using the archive icon.</string>
	<string name="empty_list_archive_action">How to archive</string>
	<string name="short_reads">Short Reads</string>
	<string name="long_reads">Long Reads</string>
</resources>