<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_highlight"
        app:showAsAction="always"
        android:title="@string/ac_highlight" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/toolbar_share"
        app:showAsAction="always"
        android:title="@string/ac_share" />

    <item
        android:id="@+id/menu_copy"
        android:icon="@drawable/ic_content_copy_black_24dp"
        app:showAsAction="always"
        android:title="@string/ac_copy" />

    <item
        android:id="@+id/menu_translate"
        android:icon="@drawable/ic_g_translate_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/ac_translate" />

    <item
        android:id="@+id/menu_web_search"
        android:icon="@drawable/toolbar_search"
        app:showAsAction="ifRoom"
        android:title="@string/ac_web_search" />

    <item
        android:id="@+id/menu_select_all"
        app:showAsAction="ifRoom"
        android:title="@string/ac_select_all" />

</menu>