<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="viewModel"
            type="com.pocket.app.settings.account.DeleteAccountViewModel"
            />
        
    </data>
    <com.pocket.ui.view.themed.ThemedNestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <com.pocket.ui.view.themed.ThemedConstraintLayout2
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:paddingBottom="@dimen/pkt_space_lg"
            >
            <com.pocket.ui.view.AppBar
                android:id="@+id/appBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:title="@string/setting_account_management"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:leftIcon="close"
                />
            <com.pocket.ui.view.themed.ThemedTextView
                android:id="@+id/header"
                style="@style/Pkt_Text_Large_Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/pkt_space_md"
                android:paddingTop="@dimen/pkt_space_lg"
                android:paddingEnd="@dimen/pkt_space_md"
                android:paddingBottom="@dimen/pkt_space_md"
                android:text="@string/setting_delete_account_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBar"
                />
            <com.pocket.ui.view.themed.ThemedTextView
                android:id="@+id/warning"
                style="@style/Pkt_Text_Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/pkt_space_md"
                android:paddingTop="@dimen/pkt_space_md"
                android:paddingEnd="@dimen/pkt_space_md"
                android:paddingBottom="@dimen/pkt_space_sm"
                android:text="@string/setting_delete_account_warning"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header"
                />
            <com.pocket.ui.view.button.CheckBox
                android:id="@+id/cancelPremiumCheckbox"
                style="@style/Pkt_IconButton"
                android:layout_height="@dimen/pkt_icon_button_width"
                android:layout_marginStart="@dimen/pkt_side_sm"
                app:layout_constraintBottom_toBottomOf="@+id/cancelPremiumLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cancelPremiumLabel"
                app:visibility="@{viewModel.uiState.cancelPremiumCheckBoxVisible}"
                />
            <com.pocket.ui.view.themed.ThemedTextView
                android:id="@+id/cancelPremiumLabel"
                style="@style/Pkt_Text_Small_Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/pkt_space_md"
                android:paddingVertical="@dimen/pkt_space_sm"
                android:text="@string/setting_delete_account_cancel_premium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cancelPremiumCheckbox"
                app:layout_constraintTop_toBottomOf="@+id/warning"
                app:visibility="@{viewModel.uiState.cancelPremiumCheckBoxVisible}"
                />
            <com.pocket.ui.view.button.CheckBox
                android:id="@+id/permanentlyDeleteCheckbox"
                style="@style/Pkt_IconButton"
                android:layout_height="@dimen/pkt_icon_button_width"
                android:layout_marginStart="@dimen/pkt_side_sm"
                app:layout_constraintBottom_toBottomOf="@+id/permanentlyDeleteLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/permanentlyDeleteLabel"
                />
            <com.pocket.ui.view.themed.ThemedTextView
                android:id="@+id/permanentlyDeleteLabel"
                style="@style/Pkt_Text_Small_Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/pkt_space_md"
                android:paddingVertical="@dimen/pkt_space_sm"
                android:text="@string/setting_delete_account_permanently_delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/permanentlyDeleteCheckbox"
                app:layout_constraintTop_toBottomOf="@+id/cancelPremiumLabel"
                />
            <com.pocket.ui.view.button.ErrorButton
                android:id="@+id/deleteButton"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginHorizontal="@dimen/pkt_space_sm"
                android:layout_marginTop="@dimen/pkt_space_lg"
                android:enabled="@{viewModel.uiState.deleteButtonEnabled}"
                android:onClick="@{() -> viewModel.onDeleteButtonClicked()}"
                android:text="@string/setting_delete_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/permanentlyDeleteLabel"
                />
            <com.pocket.ui.view.themed.ThemedTextView
                android:id="@+id/cancelButton"
                style="@style/Pkt_Text_Small_Link_Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pkt_space_sm"
                android:gravity="center"
                android:padding="@dimen/pkt_space_sm"
                android:text="@string/ac_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deleteButton"
                />
        </com.pocket.ui.view.themed.ThemedConstraintLayout2>
    </com.pocket.ui.view.themed.ThemedNestedScrollView>
</layout>
